# Azure-pro

./: .dockerignore  .env.example  .env.profiles  .gitignore  CLAUDE.md  Dockerfile  FAST-FINALS-LOG.md  IMPROVEMENTS-SUMMARY.md  PLAYWRIGHT-TEST-FINDINGS.md  README-FASTFINALS.md  README.md  TEST-RESULTS.md  agents.md  e2e-2min-metrics.json  e2e-hybrid-metrics.json  e2e-test-metrics.json  package-lock.json  package.json  playwright.config.js  run-2min-test.sh  run-30sec-test.sh  run-8min-test.sh  run-e2e-realtime-test.sh  run-hybrid-test.sh  run-smoke-test.sh  start-conversation.sh  start-dictation.sh
.claude/: settings.local.json
client/: components.json  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
docs/: CHANGELOG-2025-11-26.md  SYSTEM-ARCHITECTURE.md
local-whisper-svc/: README.md  pyproject.toml
local-whisper-svc/src/local_whisper_svc/: __init__.py  local_agreement.py  protocol.py  server.py  vad.py  whisper_engine.py
local-whisper-svc/src/local_whisper_svc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
local-whisper-svc/tests/: __init__.py  test_local_agreement.py
playwright-report/: index.html
public/: admin.html  index.html  listener.html  pcm-worklet.js  speaker.html
scripts/: deepgram-harness.js  local-whisper-harness.js  patch-fuzzer.js  segment-text.js  test-deepgram-stt.js  test-elevenlabs-stt.js  wav-harness.js  ws-listener.js
server/: elevenlabs-stt-session.js  index.js  local-whisper-session.js  metrics.js  peek-detector.js  room-registry-pg.js  room-registry.js  tts.js  (+8 more)
(+42 files in other folders)
