[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-whisper-svc"
version = "0.1.0"
description = "Local faster-whisper STT service for Simo/Canoë"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "faster-whisper>=1.0.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "silero-vad>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
whisper-svc = "local_whisper_svc.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
